[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perturbdict"
version = "0.1.0"
description = "A lightweight data class for storing transcriptomics data"
readme = "README.md"
authors = [{name = "Kaspar Märtens"}]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "statsmodels>=0.12.0",
    "scikit-learn>=0.24.0",
]

[project.optional-dependencies]
anndata = ["anndata>=0.8.0"]